# codeeditor

./: compose.yaml
backend/: Dockerfile  package-lock.json  package.json
backend/src/: main.js  routes.js
backend/src/controllers/: executeController.js
execenv/: Dockerfile  pyproject.toml  requirements.txt
execenv/src/: main.py  subprocesslogic.py
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json
frontend/codefrontend/: package-lock.json
frontend/src/: App.jsx  Code.css  CodeEditor.jsx  CodeEditor2.jsx  index.css
frontend/src/backendController/: pythonBackend.js
