[tool.poetry]
name = "executor"
version = "0.1.0"
description = ""
authors = ["rschavre <74766885+rschavre@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
